# machine_learning

./: CMakeLists.txt  main.cpp  makefile  matrix.cpp  neural_network.cpp  random_number_generator.cpp
include/: matrix.hpp  neural_network.hpp  random_number_generator.hpp
src/: main.cpp  matrix.cpp  neural_network.cpp  random_number_generator.cpp
